tests/ui/rfc-2565-param-attrs/param-attrs-2018.stderr
error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/param-attrs-2018.rs:3:41
   |
LL | trait Trait2015 { fn foo(#[allow(C)] i32); }
   |                                         ^ expected one of `:`, `@`, or `|`
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this is a `self` type, give it a parameter name
   |
LL | trait Trait2015 { fn foo(#[allow(C)] self: i32); }
   |                                      +++++
help: if this is a parameter name, give it a type
   |
LL | trait Trait2015 { fn foo(#[allow(C)] i32: TypeName); }
   |                                         ++++++++++
help: if this is a type, explicitly ignore the parameter name
   |
LL | trait Trait2015 { fn foo(#[allow(C)] _: i32); }
   |                                      ++

error: aborting due to previous error

